<resources>
    <string name="app_name">牛牛小说</string>
    <string name="nb.title.app">牛牛小说</string>
    <string name="add_tag">Add Tag</string>
    <string name="search">搜索</string>
    <string name="search_hot_search">大家都在搜</string>
    <string name="search_change_a_lot">换一批</string>
    <string name="search_result_lately_follower">"%1$d人在追 |&#160;"</string>
    <string name="search_result_retention_ratio">"%1$s%%读者留存 |&#160;"</string>
    <string name="search_result_author">%1$s著</string>
    <string name="book_detail">书籍详情</string>
    <string name="book_detail_author">%1$s</string>
    <string name="book_detail_category"> &#160;|&#160;%1$s |&#160;</string>
    <string name="book_detail_user_lv">&#160;lv.%1$d</string>
    <string name="book_detail_remove_collection">已加入书架</string>
    <string name="book_detail_join_collection">追更新</string>
    <string name="book_detail_retention_ratio">%1$s%%</string>
    <string name="book_detail_hot_reviews">热门书评</string>
    <string name="book_detail_community">%1$s的社区</string>
    <string name="book_detail_post_count">共有%1$d个帖子</string>
    <string name="book_detail_recommend_book_list">推荐书单</string>
    <string name="book_detail_recommend_book_list_book_count">共%1$d本书 |&#160;</string>
    <string name="book_detail_recommend_book_list_collector_count">%1$d人收藏</string>
    <string name="book_detail_is_joined_the_book_shelf">是否将《%1$s》加入书架</string>
    <string name="book_detail_has_joined_the_book_shelf">《%1$s》成功加入书架</string>
    <string name="book_detail_has_remove_the_book_shelf">已移除《%1$s》</string>
    <string name="book_read_reading">朗读</string>
    <string name="book_read_community">社区</string>
    <string name="book_read_change_source">换源</string>
    <string name="book_read_introduce">简介</string>
    <string name="book_read_mode_day">夜间</string>
    <string name="book_read_mode_day_manual_setting">日间</string>
    <string name="book_read_mode_night_manual_setting">夜间</string>
    <string name="book_read_hsitory">历史阅读</string>
    <string name="book_read_feedback">反馈</string>
    <string name="book_read_settings">设置</string>
    <string name="book_read_download">缓存</string>
    <string name="book_read_mark">书签</string>
    <string name="book_read_toc">目录</string>
    <string name="add_bookmark">新增书签</string>
    <string name="manage_bookmark">管理</string>
    <string name="clear_bookmark">清除</string>
    <string name="book_read_download_error">网络异常，已取消下载</string>
    <string name="book_read_download_complete">缓存完成，失败%1$d章</string>
    <string name="book_read_alreday_download">已缓存过:%1$s(%2$d/%3$d)...</string>
    <string name="book_read_download_progress">正在缓存:%1$s(%2$d/%3$d)...</string>
    <string name="net_error">网络异常</string>
    <string name="book_read_add_book">添书</string>
    <string name="book_read_would_you_like_to_add_this_to_the_book_shelf">是否将本书加入书架？</string>
    <string name="exit_app_tip">确定退出牛牛小说</string>
    <string name="book_read_join_the_book_shelf">加入书架</string>
    <string name="book_read_not">不了</string>
    <string name="exit_wifi_local">确定要关闭？WIFI传书将会中断 ！</string>
    <string name="category">分类</string>
    <string name="male">男生</string>
    <string name="female">女生</string>
    <string name="category_book_count">%1$d本</string>
    <string name="category_book_msg">%1$d人在追 |&#160; %2$s%%读者留存</string>
    <string name="subject_book_msg">共%1$d本书 |&#160; %2$d人收藏</string>
    <string name="subject_book_list">主题书单</string>
    <string name="subject_book_list_my_book_list">我的书单</string>
    <string name="subject_book_list_detail">书单详情</string>
    <string name="subject_book_list_detail_book_lately_follower">%1$d&#160;人在追</string>
    <string name="subject_book_list_detail_book_word_count">|&#160;%1$d&#160;万字</string>
    <string name="comment_floor">%1$d楼&#160;</string>
    <string name="comment_like_count">❤%1$d次同感</string>
    <string name="comment_best_comment">仰望神评论</string>
    <string name="comment_comment_count">共%1$d条评论</string>
    <string name="comment_reply_floor">(%1$d楼)</string>
    <string name="comment_reply_nickname">回复 %1$s</string>
    <string name="book_review_book_type">[%1$s]</string>
    <string name="book_review_helpful_yes">%1$d 人推荐</string>
    <string name="book_review_detail_helpful_yes">有用</string>
    <string name="book_review_detail_helpful_no">无用</string>
    <string name="book_review_detail_to_review_the_scoring">给书评打分</string>
    <string name="book_review_detail_score">楼主打分：</string>
    <string name="menu_main_please_login">请登录</string>
    <string name="menu_main_my_message">我的消息</string>
    <string name="menu_main_sync_bookshelf">同步书架</string>
    <string name="menu_main_wifi_book">WIFI传书</string>
    <string name="menu_main_feedback">意见反馈</string>
    <string name="menu_main_night_mode">夜间模式</string>
    <string name="menu_main_settings">设置</string>
    <string name="menu_main_scan_local_book">扫描本地书籍</string>
    <string name="exit_tips">再按一次退出程序</string>
    <string name="remove_selected_book">移除所选书籍</string>
    <string name="delete_local_cache">同时删除本地缓存</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="cancel_selected_all">取消全选</string>
    <string name="selected_all">全选</string>
    <string name="has_not_selected_delete_book">你没有选择要删的书哦</string>
    <string name="add_the_book_you_like">添加你喜欢的小说</string>
    <string name="network_error_tips">加载失败，请检查网络或稍后再试</string>
    <string name="cancle_top">取消置顶</string>
    <string name="to_add">去添加</string>
    <string name="appbar_overscroll_behavior">com.kaqi.niuniu.reader.view.AppBarLayoutOverScrollViewBehavior</string>
    <string name="appbar_circleimageview_behavior">com.kaqi.niuniu.reader.view.CircleImageInUsercBehavior</string>
    <string name="send_msg">发送消息</string>
    <string name="bind_alias">绑定别名</string>
    <string name="bind_alias_unknown_exception">绑定别名失败，未知异常</string>
    <string name="bind_alias_success">绑定别名成功</string>
    <string name="bind_alias_error_frequency">绑定别名失败，请求频次超限</string>
    <string name="bind_alias_error_param_error">绑定别名失败，参数错误</string>
    <string name="bind_alias_error_request_filter">绑定别名失败，请求被过滤</string>
    <string name="bind_alias_error_cid_lost">绑定别名失败，未获取到cid</string>
    <string name="bind_alias_error_connect_lost">绑定别名失败，网络错误</string>
    <string name="bind_alias_error_alias_invalid">绑定别名失败，别名无效</string>
    <string name="bind_alias_error_sn_invalid">绑定别名失败，sn无效</string>
    <string name="unbind_alias">解绑别名</string>
    <string name="unbind_alias_unknown_exception">取消绑定别名失败，未知异常</string>
    <string name="unbind_alias_success">取消绑定别名成功</string>
    <string name="unbind_alias_error_frequency">取消绑定别名失败，请求频次超限</string>
    <string name="unbind_alias_error_param_error">取消绑定别名失败，参数错误</string>
    <string name="unbind_alias_error_request_filter">取消绑定别名失败，请求被过滤</string>
    <string name="unbind_alias_error_cid_lost">取消绑定别名失败，未获取到cid</string>
    <string name="unbind_alias_error_connect_lost">取消绑定别名失败，网络错误</string>
    <string name="unbind_alias_error_alias_invalid">取消绑定别名失败，别名无效</string>
    <string name="unbind_alias_error_sn_invalid">取消绑定别名失败，sn无效</string>
    <string name="add_tag_unknown_exception">设置标签失败，未知异常</string>
    <string name="add_tag_success">接口调用成功</string>
    <string name="add_tag_error_count">接口调用失败, tag数量过大, 最大不能超过200个</string>
    <string name="add_tag_error_frequency">设置标签失败，频率过快</string>
    <string name="add_tag_error_null">接口调用失败, tag 为空</string>
    <string name="add_tag_error_repeat">设置标签失败, 标签重复</string>
    <string name="add_tag_error_unbind">设置标签失败, 服务未初始化成功</string>
    <string name="add_tag_error_not_online">还未登陆成功</string>
    <string name="add_tag_error_black_list">该应用已经在黑名单中,请联系售后支持!</string>
    <string name="add_tag_error_exceed">已存 tag 超过限制</string>
    <string name="push_transmission_data">收到一条透传测试消息</string>
    <string-array name="nb_fragment_title">
        <item>@string/nb.fragment.title.bookshelf</item>
        <item>@string/nb.fragment.title.community</item>
        <item>@string/nb.fragment.title.find</item>
    </string-array>
    <string-array name="nb_fragment_section">
        <item>@string/nb.fragment.community.comment</item>
        <item>@string/nb.fragment.community.discussion</item>
        <item>@string/nb.fragment.community.help</item>
        <item>@string/nb.fragment.community.girl</item>
        <item>@string/nb.fragment.community.compose</item>
    </string-array>
    <string-array name="nb_fragment_bill_book">
        <item>周榜</item>
        <item>月榜</item>
        <item>总榜</item>
    </string-array>
    <string-array name="nb_menu_net_book">
        <item>@string/nb.menu.action.top</item>
        <item>@string/nb.menu.action.cache</item>
        <item>@string/nb.menu.action.delete</item>
        <item>@string/nb.menu.action.batch_manage</item>
    </string-array>
    <string-array name="nb_menu_local_book">
        <item>@string/nb.menu.action.top</item>
        <item>@string/nb.menu.action.delete</item>
        <item>@string/nb.menu.action.batch_manage</item>
    </string-array>
    <string name="nb.common.tip">提示</string>
    <string name="nb.common.sure">确定</string>
    <string name="nb.common.cancel">取消</string>
    <string name="nb.net.error_tip">似乎没有网络哦</string>
    <string name="nb.fragment.title.bookshelf">书架</string>
    <string name="nb.fragment.title.community">社区</string>
    <string name="nb.fragment.title.find">发现</string>
    <string name="nb.fragment.community.comment">综合讨论区</string>
    <string name="nb.fragment.community.discussion">书评区</string>
    <string name="nb.fragment.community.help">书荒帮助区</string>
    <string name="nb.fragment.community.girl">女生区</string>
    <string name="nb.fragment.community.compose">原创区</string>
    <string name="nb.fragment.book_list.hot">推荐</string>
    <string name="nb.fragment.book_list.boys">男主</string>
    <string name="nb.fragment.book_list.grils">女主</string>
    <string name="nb.fragment.book_list.message">共%1$d本书 |&#160; %2$d人收藏</string>
    <string name="nb.comment.floor">%1$d楼&#160;</string>
    <string name="nb.comment.like_count">❤%1$d次同感</string>
    <string name="nb.comment.best_comment">仰望神评论</string>
    <string name="nb.comment.comment_count">共%1$d条评论</string>
    <string name="nb.comment.reply_floor">(%1$d楼)</string>
    <string name="nb.comment.reply_nickname">回复 %1$s</string>
    <string name="nb.comment.empty_comment">暂无评论</string>
    <string name="nb.review.book_type">[%1$s]</string>
    <string name="nb.review.recommend">%1$d 人推荐</string>
    <string name="nb.review.helpful">有用</string>
    <string name="nb.review.unhelpful">无用</string>
    <string name="nb.review.book_score">给书评打分</string>
    <string name="nb.review.master_score">楼主打分：</string>
    <string name="nb.fragment.find.top">排行榜</string>
    <string name="nb.fragment.find.topic">主题书单</string>
    <string name="nb.fragment.find.sort">分类</string>
    <string name="nb.fragment.find.listen">有声小说</string>
    <string name="nb.dialog.text.introduce">我们会根据您的喜好\n推荐相对应的小说</string>
    <string name="nb.dialog.text.choose_tip">--请选择你的喜好--</string>
    <string name="nb.dialog.text.boy_story">男生小说</string>
    <string name="nb.dialog.text.girl_story">女生小说</string>
    <string name="nb.menu.action.search">搜索</string>
    <string name="nb.menu.action.login">请登录</string>
    <string name="nb.menu.action.message">我的消息</string>
    <string name="nb.menu.action.download">下载列表</string>
    <string name="nb.menu.action.sync">同步书架</string>
    <string name="nb.menu.action.scan">扫描本地书籍</string>
    <string name="nb.menu.action.transfer">WIFI传书</string>
    <string name="nb.menu.action.feedback">意见反馈</string>
    <string name="nb.menu.action.night_mode">夜间模式</string>
    <string name="nb.menu.action.setting">设置</string>
    <string name="nb.menu.action.top">置顶</string>
    <string name="nb.menu.action.cache">缓存</string>
    <string name="nb.menu.action.delete">删除</string>
    <string name="nb.menu.action.batch_manage">批量管理</string>
</resources>