<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_leather_bg"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rlBookReadRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/flReadWidget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:focusable="false"
            android:layerType="hardware">

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/read_book_get_money_rl"
            android:layout_width="@dimen/wh48.0dimens48.0dp"
            android:layout_height="@dimen/wh30.0dimens30.0dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/wh12.0dimens12.0dp"
            android:layout_marginRight="@dimen/wh12.0dimens12.0dp">

            <TextView
                android:id="@+id/read_book_tip_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/yellow_30"
                android:text="看广告赚金币"
                android:textColor="@color/common_h2"
                android:textSize="8sp"
                android:visibility="visible" />

            <com.kaqi.reader.view.circleprogress.CircleProgress
                android:id="@+id/circle_progress"
                android:layout_width="@dimen/wh28.0dimens28.0dp"
                android:layout_height="@dimen/wh28.0dimens28.0dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                app:antiAlias="true"
                app:arcWidth="4dp"
                app:bgArcColor="@android:color/darker_gray"
                app:bgArcWidth="2dp"
                app:maxValue="1000"
                app:startAngle="1"
                app:sweepAngle="360"
                app:value="1" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llBookReadTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/reader_menu_bg_color"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:src="@drawable/ab_back" />

            <TextView
                android:id="@+id/tvBookReadTocTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone"
                tools:text="" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />

            <TextView
                android:id="@+id/tvBookReadIntroduce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/book_read_introduce"
                android:textColor="@color/book_read_top_text"
                android:textSize="@dimen/book_read_top_text" />


            <TextView
                android:id="@+id/tvBookReadSource"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/book_read_change_source"
                android:textColor="@color/book_read_top_text"
                android:textSize="@dimen/book_read_top_text"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDownloadProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llBookReadBottom"
            android:background="#89232323"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:text="@string/book_read_download_progress"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:visibility="visible" />

        <include layout="@layout/layout_read_aa_set" />

        <include layout="@layout/layout_read_mark" />

        <LinearLayout
            android:id="@+id/llBookReadBottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/wh64.0dimens64.0dp"
            android:layout_alignParentBottom="true"
            android:background="@color/reader_menu_bg_color"
            android:clickable="true"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvBookReadMode"
                android:layout_width="0dp"
                android:layout_height="@dimen/wh64.0dimens64.0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_read_menu_morning"
                android:drawablePadding="@dimen/wh6.0dimens6.0dp"
                android:gravity="center"
                android:paddingTop="@dimen/wh6.0dimens6.0dp"
                android:text="@string/book_read_mode_day"
                android:textColor="@color/book_read_bottom_text"
                android:textSize="@dimen/book_read_bottom_text" />

            <TextView
                android:id="@+id/tvBookReadSettings"
                android:layout_width="0dp"
                android:layout_height="@dimen/wh64.0dimens64.0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_read_menu_font"
                android:drawablePadding="@dimen/wh6.0dimens6.0dp"
                android:gravity="center"
                android:paddingTop="@dimen/wh6.0dimens6.0dp"
                android:text="@string/book_read_settings"
                android:textColor="@color/book_read_bottom_text"
                android:textSize="@dimen/book_read_bottom_text" />

            <TextView
                android:id="@+id/tvBookReadDownload"
                android:layout_width="0dp"
                android:layout_height="@dimen/wh64.0dimens64.0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_reader_ab_download"
                android:drawablePadding="@dimen/wh6.0dimens6.0dp"
                android:gravity="center"
                android:paddingTop="@dimen/wh6.0dimens6.0dp"
                android:text="@string/book_read_download"
                android:textColor="@color/book_read_bottom_text"
                android:textSize="@dimen/book_read_bottom_text"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvBookMark"
                android:layout_width="0dp"
                android:layout_height="@dimen/wh64.0dimens64.0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_menu_bookmark"
                android:drawablePadding="@dimen/wh6.0dimens6.0dp"
                android:gravity="center"
                android:paddingTop="@dimen/wh6.0dimens6.0dp"
                android:text="@string/book_read_mark"
                android:textColor="@color/book_read_bottom_text"
                android:textSize="@dimen/book_read_bottom_text" />

            <TextView
                android:id="@+id/tvBookReadToc"
                android:layout_width="0dp"
                android:layout_height="@dimen/wh64.0dimens64.0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_read_menu_category"
                android:drawablePadding="@dimen/wh6.0dimens6.0dp"
                android:gravity="center"
                android:paddingTop="@dimen/wh6.0dimens6.0dp"
                android:text="@string/book_read_toc"
                android:textColor="@color/book_read_bottom_text"
                android:textSize="@dimen/book_read_bottom_text" />

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>