<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/wh64.0dimens64.0dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.kaqi.reader.view.DisInterceptNestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white" />

            <TextView
                style="@style/text_style_Spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/wh15.0dimens15.0dp"
                android:text="简介"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tvlongIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/wh3.0dimens3.0dp"
                android:lineSpacingMultiplier="1.2"
                android:maxLines="5"
                android:padding="15dp"
                android:textColor="@color/alpha_35_black"
                android:textSize="15sp"
                tools:text="千年前，唐峰攀登昆仑山，意外坠崖，穿越上古星空大阵进入星辰之海，自此，走上修仙之路。千年征战，横扫星海，成就无上仙身，为紫微仙君。唐峰穿越星空大阵，损耗元神，重返地球，却发现，地球仅仅过去了六年的时间，而且，他还有了一个粉嘟嘟的宝贝女儿。高冷的霸道女总裁前女友，聪明的女儿，从此，让星辰之海战栗的紫微仙君，开启了极品奶爸的全新人生。" />


            <com.kaqi.reader.view.TagGroup
                android:id="@+id/tag_group"
                style="@style/TagGroup.Small"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/wh0.5dimens0.5dp"
                android:layout_marginTop="@dimen/wh10.0dimens10.0dp"
                android:background="@color/common_divider_wide" />

            <RelativeLayout
                android:id="@+id/book_catalog_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/wh54.0dimens54.0dp"

                android:layout_marginLeft="15dp">

                <TextView
                    android:id="@+id/mulu"
                    style="@style/text_style_Spacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="查看目录"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mulu_tv"
                    style="@style/text_style_Spacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/wh12.0dimens12.0dp"
                    android:layout_toRightOf="@+id/mulu"
                    android:text="完结 288 章节"
                    android:textColor="@color/alpha_35_black"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/wh10.0dimens10.0dp"
                    android:src="@drawable/game_right_arrow" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/wh0.5dimens0.5dp"
                android:background="@color/common_divider_wide" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/book_detail_hot_reviews"
                    android:textColor="@color/common_h1"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvMoreReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="15dp"
                    android:text="更多"
                    android:textColor="@color/common_h2"
                    android:textSize="15sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvHotReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/white"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/rlCommunity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvCommunity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_detail_community"
                    android:textColor="@color/common_h1"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvHelpfulYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvCommunity"
                    android:layout_marginTop="5dp"
                    android:text="@string/book_detail_post_count"
                    android:textColor="@color/common_h2"
                    android:textSize="13sp" />

                <ImageView
                    android:layout_width="@dimen/wh14.0dimens14.0dp"
                    android:layout_height="@dimen/wh14.0dimens14.0dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/game_right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tvRecommendBookList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="1dp"
                android:lineSpacingMultiplier="1.1"
                android:padding="15dp"
                android:text="@string/book_detail_recommend_book_list"
                android:textColor="@color/common_h1"
                android:textSize="15sp"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvRecommendBoookList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center" />
        </LinearLayout>
    </com.kaqi.reader.view.DisInterceptNestedScrollView>


</FrameLayout>